project ("ytrv_test" LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD_DEFAULT 14)

enable_testing()

if (YTRV_BUILD_SHARED)
    set(YTRV_TEST_BUILD_SHARED TRUE)
    message(STATUS "${PROJECT_NAME}: Will build shared ${PROJECT_NAME}")
else ()
    set(YTRV_TEST_BUILD_SHARED FALSE)
    message(STATUS "${PROJECT_NAME}: Will NOT build shared ${PROJECT_NAME}")
endif ()
if (YTRV_BUILD_STATIC)
    set(YTRV_TEST_BUILD_STATIC TRUE)
    message(STATUS "${PROJECT_NAME}: Will build static ${PROJECT_NAME}")
else ()
    set(YTRV_TEST_BUILD_STATIC FALSE)
    message(STATUS "${PROJECT_NAME}: Will NOT build static ${PROJECT_NAME}")
endif ()

set(YTRV_TEST_LIBRARY_SHARED ${CEU_LIBRARY_SHARED} ${YTRV_LIBRARY_SHARED} ${LABW_GTEST_SHARED})
set(YTRV_TEST_LIBRARY_STATIC ${CEU_LIBRARY_STATIC} ${YTRV_LIBRARY_STATIC} ${LABW_GTEST_STATIC})

macro(ytrv_add_test test_name source_name)
    if (YTRV_TEST_BUILD_SHARED)
        add_executable("test_ytrv_${test_name}_shared" "${source_name}")
        target_link_libraries("test_ytrv_${test_name}_shared" ${YTRV_TEST_LIBRARY_SHARED})
        add_test(NAME "test_ytrv_${test_name}_shared" COMMAND "test_ytrv_${test_name}_shared")
        message(STATUS "YTRV: Adding test test_ytrv_${test_name}_shared")
    endif ()
    if (YTRV_TEST_BUILD_STATIC)
        add_executable("test_ytrv_${test_name}_static" "${source_name}")
        target_link_libraries("test_ytrv_${test_name}_static" ${YTRV_TEST_LIBRARY_STATIC})
        ceu_cm_set_static_target("test_ytrv_${test_name}_static")
        add_test(NAME "test_ytrv_${test_name}_static" COMMAND "test_ytrv_${test_name}_static")
        message(STATUS "YTRV: Adding test test_ytrv_${test_name}_static")
    endif ()
endmacro()


# ytrv_add_test()
ytrv_add_test("op" "${CMAKE_CURRENT_LIST_DIR}/test_op.cpp")
ytrv_add_test("arith" "${CMAKE_CURRENT_LIST_DIR}/test_arith.cpp")
add_subdirectory("dev")
